# hack-builder-august2024

./: Readme.md  docker-compose.yaml
src/: Dockerfile  app.py  pyproject.toml
src/ML/: ml_main.py
src/controllers/: auth_controller.py  client_controller.py  customer_controller.py  profession_controller.py
src/database/: db.py  manager.py  models.py  schemas.py
src/logic/: client_logic.py  customer_logic.py  profession_logic.py
src/settings/: config.py  router.py
