[tool.poetry]
name = "hackaton"
version = "0.1.0"
description = ""
authors = ["danil <kotikov.lil@bkl.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
fastapi = "^0.112.0"
asyncpg = "^0.29.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
email-validator = "^1.3.0"
werkzeug = "^3.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
